feat: add bootstrap framework + projects slicing

--- a/src/app/projects/components/projects-list/projects-list.component.html
+++ b/src/app/projects/components/projects-list/projects-list.component.html
@@ -1,3 +1,21 @@
-<ul>
-  <li *ngFor="let project of projects">{{ project.name }}</li>
-</ul>
+<div class="card">
+  <div class="card-header">
+    {{ pageTitle }}
+  </div>
+  <div class="card-body">
+    <div class='table-responsive'>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let project of projects">
+            <td>{{ project.name }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
