--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="container">
+  <h1>Icapps Technische Opdracht</h1>
+
+  <router-outlet></router-outlet>
+</div>
