--- a/src/app/projects/components/projects-list/projects-list.component.html
+++ b/src/app/projects/components/projects-list/projects-list.component.html
@@ -3,7 +3,13 @@
     {{ pageTitle }}
   </div>
   <div class="card-body">
-    <div class='table-responsive'>
+    <div *ngIf="loading" class="d-flex justify-content-center mt-5">
+      <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+
+    <div *ngIf="projects" class='table-responsive'>
       <table class="table">
         <thead>
           <tr>
