--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Icapps Technische Opdracht</h1>
+  <h1 class="mt-5 mb-5">Icapps Technische Opdracht</h1>
 
   <router-outlet></router-outlet>
 </div>
