--- a/src/app/project/components/project-list/project-list.component.html
+++ b/src/app/project/components/project-list/project-list.component.html
@@ -3,13 +3,20 @@
     {{ pageTitle }}
   </div>
   <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-4">
+        <label for="formGroupExampleInput">Zoek:</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" [(ngModel)]="searchText">
+      </div>
+    </div>
+
     <div *ngIf="loading" class="d-flex justify-content-center mt-5">
       <div class="spinner-border" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
 
-    <div *ngIf="projects" class='table-responsive'>
+    <div *ngIf="filteredProjects" class='table-responsive'>
       <table class="table">
         <thead>
           <tr>
@@ -18,7 +25,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let project of projects">
+          <tr *ngFor="let project of filteredProjects">
             <td>{{ project.name }}</td>
             <td><a [routerLink]="['/projects', project.id]">Detail</a></td>
           </tr>
