--- a/src/app/project/components/project-detail/project-detail.component.html
+++ b/src/app/project/components/project-detail/project-detail.component.html
@@ -4,7 +4,13 @@
   </div>
 
   <div class="card-body">
-    <div class="row">
+    <div *ngIf="loading" class="d-flex justify-content-center mt-5">
+      <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+
+    <div *ngIf="project" class="row">
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-3">Aantal stars:</div>
