--- a/src/app/project/components/project-detail/project-detail.component.html
+++ b/src/app/project/components/project-detail/project-detail.component.html
@@ -1,6 +1,7 @@
 <div class="card">
-  <div class="card-header">
+  <div class="card-header d-flex align-items-center justify-content-between">
     <h2>{{ project?.name }}</h2>
+    <a [routerLink]="['/projects']">Terug naar projecten</a>
   </div>
 
   <div class="card-body">
